<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.mainScreen.MainScreenFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/user_menu"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/ivFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_icon_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters_text_view"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/color_app"
        android:layout_marginStart="8dp"
        android:textSize="12sp"
        android:fontFamily="@font/open_sans_semibold"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="@id/ivFilters"
        app:layout_constraintStart_toEndOf="@id/ivFilters"
        app:layout_constraintBottom_toBottomOf="@id/ivFilters"/>

    <LinearLayout
        android:gravity="end"
        android:layout_weight="1"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_button"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_button2"/>
    </LinearLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_product"
        android:layout_width="0dp"
        android:layout_height="0dp"/>


    <RelativeLayout
        android:id="@+id/buttonBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:background="@drawable/button_cart_bg"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="25dp"
                android:layout_marginStart="16dp"
                android:layout_height="match_parent"
                android:background="@color/color_app"
                app:tint="@color/white"
                android:src="@drawable/ic_basket"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:fontFamily="@font/open_sans_semibold"
                android:background="@color/color_app"
                android:text="@string/my_cart_title_button"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tvListSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_test_count"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/raunded_textview_cart"
                />
        </LinearLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>