<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.productDetail.ProductDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_arrow_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/user_menu"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:layout_centerInParent="true"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_pagination"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#9CB1BC"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Apple Iphone 11"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/color_app"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans_extrabold"
        app:layout_constraintTop_toBottomOf="@id/view1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="12sp"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="16dp"
                tools:text="iOS, ecran tactil 5.8, GPS, 64 GB, 12 mpx"
                app:layout_constraintTop_toBottomOf="@id/tvProductName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="16sp"
                    android:textColor="#035A97"
                    tools:text="$ 980,-"/>

                <TextView
                    android:id="@+id/tvSmallPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/open_sans_semibold"
                    android:textSize="11sp"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:textColor="#9CB1BC"
                    android:layout_marginStart="10dp"
                    tools:text="$ 980,-"/>

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9CB1BC"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvLabelInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information_text_view"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/color_app"
                android:fontFamily="@font/open_sans_extrabold"
                app:layout_constraintTop_toBottomOf="@id/view2"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:fontFamily="@font/open_sans"
                android:textSize="12sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:textColor="#424A56"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvLabelInformation"
                app:layout_constraintStart_toStartOf="@id/tvLabelInformation"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvProductName"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:text="@string/add_to_cart_title_button" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#7740A2"
            android:text="@string/buy_now_title_button" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>